Fri Apr 27 12:33:31 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * tests/Bug_2912_Regression_Test.cpp:

          Don't compile the bulk of the code if the proactor is not
          supported.

Fri Apr 27 08:17:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
        * bin/tao_other_tests.lst:
          Exclude several tests with CORBA/e micro enabled

Thu Apr 26 12:19:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Exclude several tests with CORBA/e micro enabled

Thu Apr 26 13:23:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Added Bug_2909_Regression

Thu Apr 26 12:19:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Exclude several tests with CORBA/e micro enabled

Thu Apr 26 10:53:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/SSL/SSL_Asynch_Stream.cpp (do_SSL_read):
          Also added ERR_clear_error before doing a SSL_write, belongs to
          bugzilla 2912

Wed Apr 25 13:11:00 UTC 2007  Simon Massey  <sma@prismtech.com>

        * ace/config-lynxos.h:
          Also needs ACE_HAS_SIGTIMEDWAIT.

Wed Apr 25 11:56:06 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * docs/bczar/bczar.html:

          Modified the step to copy the packages to the previous_versions
          directory to be similar to what it previously was (before I
          mistakenly changed it) and updated it to include the use of a
          script to avoid manually running multiple commands.

Wed Apr 25 09:44:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_other_tests.lst:
          Added Bug_2908_Regression

Wed Apr 25 08:45:00 UTC 2007  Simon Massey  <sma@prismtech.com>

        * ace/config-lynxos.h:
          LynxOS4.2 does not seem to have thread process scoping.

Wed Apr 25 08:16:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>
